--- a/Web/index.html
+++ b/Web/index.html
@@ -65,7 +65,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.1.0/chroma.min.js"></script><!--Web Apps JS-->
   <script src="static/js/button.js"></script>
   <script src="static/js/event.js"></script>
-  <script src="static/js/areachart.js"></script>
+  <script src="static/js/pie.js"></script>
   <script src="static/js/map.js"></script> 
   <script type="text/javascript" src="static/js/config.js"></script>
 
@@ -89,7 +89,7 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right navbar-right-custom">
           <li><a href="visualizations.html">Visualizations</a></li>
-          <li><a href="ml.html">Machine Learning</a></li>
+          <li><a href="ml.html">Predictive Analysis</a></li>
           <li><a href="AprilTable.html">Data Source</a></li>
         </ul>
       </div>
@@ -103,7 +103,8 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
-        <h1>NYC Motor Vehicle Crashes: An Analysis</h1>
+        <h1>NYC Motor Vehicle Crashes:</h1>
+        <h2>An Analysis</h2>
         <p>This web page is dedicated to a visualized study of the motor vehicle crashes that occured in New York City during the month April 2020. <br>
       </p>
       </div>
@@ -111,7 +112,7 @@
   </div>
 
 <a class="btn btn-primary" href="visualizations.html" role="button">Visualizations</a>
-<a class="btn btn-primary" href="ml.html" role="button">Deeper Learning</a>
+<a class="btn btn-primary" href="ml.html" role="button">Predictive Analysis</a>
 <a class="btn btn-primary" href="AprilTable.html" role="button">Data Source</a>
 <br><br>
 <!--Image-->
