--- a/Web/AprilTable.html
+++ b/Web/AprilTable.html
@@ -30,7 +30,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right navbar-right-custom">
             <li><a href="visualizations.html">Visualizations</a></li>
-            <li><a href="ml.html">Machine Learning</a></li>
+            <li><a href="ml.html">Predictive Analysis</a></li>
             <li><a href="AprilTable.html">Data Source</a></li>
           </ul>
         </div>
@@ -47912,3 +47912,5 @@
   </center>
   </tbody>
 </table>
+</body>
+</html>
