--- a/Web/visualizations.html
+++ b/Web/visualizations.html
@@ -32,10 +32,9 @@
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.css" rel="stylesheet" />
 <!--JQuery-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="static/js/event.js"></script>
 <!--Chart JS-->
-  <script src="static/js/button.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js" integrity="sha512-hZf9Qhp3rlDJBvAKvmiG+goaaKRZA6LKUO35oK6EsM0/kjPK32Yw7URqrq3Q+Nvbbt8Usss+IekL7CRn83dYmw==" crossorigin="anonymous"></script>  <script src="static/js/button.js"></script>
+  <script src="static/js/bar.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js" integrity="sha512-hZf9Qhp3rlDJBvAKvmiG+goaaKRZA6LKUO35oK6EsM0/kjPK32Yw7URqrq3Q+Nvbbt8Usss+IekL7CRn83dYmw==" crossorigin="anonymous"></script>  <script src="static/js/bar.js"></script>
 <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js" integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q==" crossorigin=""></script>
 <!--JS-->
@@ -63,9 +62,8 @@
   integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
   crossorigin=""></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.1.0/chroma.min.js"></script><!--Web Apps JS-->
-  <script src="static/js/button.js"></script>
-  <script src="static/js/event.js"></script>
-  <script src="static/js/areachart.js"></script>
+  <script src="static/js/bar.js"></script>
+  <script src="static/js/pie.js"></script>
   <script src="static/js/map.js"></script> 
   <script type="text/javascript" src="static/js/config.js"></script>
 
@@ -89,7 +87,7 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right navbar-right-custom">
           <li><a href="visualizations.html">Visualizations</a></li>
-          <li><a href="ml.html">Machine Learning</a></li>
+          <li><a href="ml.html">Predictive Analysis</a></li>
           <li><a href="AprilTable.html">Data Source</a></li>
         </ul>
       </div>
@@ -103,7 +101,8 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
-        <h1>NYC Motor Vehicle Crash Dashboard</h1>
+        <h1>NYC Motor Vehicle Crashes:</h1>
+        <h2>Visualizations</h2>
         <p>A collection of motor vehicle crashes that occured during April 2020 in New York City.</p>
       </div>
     </div>
@@ -133,6 +132,9 @@
  <h2>Location of Crashes - April 2020</h2>    
  <h5>Borough Color Represents Desity of Crashes in NYC April 2020</h5> 
 
+<!--MapBox GL-->
+<script src="https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.js"></script>
+<link href="https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.css" rel="stylesheet" />
 
 <!--FRAMED MAP INFORMATION-->
 <script src="static/js/map.js"></script>
