--- a/Web/ml.html
+++ b/Web/ml.html
@@ -109,8 +109,53 @@
       </div>
     </div>
   </div>
+<br><br>
 
-  
+<div class = "page-header">
+    <h3>
+       Linear Regression<br>
+       <small>Comparing the Frequency of Accidents to the Hour of Accidents.</small>
+    </h3>
+
+ 
+ <p>lakjdf;laksjdf;lksajf;lkasjdf ;klsj</p>
+<img src="images/scatter-lr.png" alt="Scatter Plot" style = "width:40%">
+
+<img src="images/scatter-lr2.png" alt="Linear Regression" style = "width:40%">
+ </div>
+
+
+<!--KNN-->
+<div class = "page-header">
+    <h3>
+       K Nearest Neighbor<br>
+       <small>Key features were utilized to predict the borough based off of accident features.</small>
+    </h3>
+
+ 
+ <p>lakjdf;laksjdf;lksajf;lkasjdf ;klsj</p>
+<img src="images/knn.png" alt="Scatter Plot" style = "width:40%">
+
+<img src="" alt="Linear Regression" style = "width:40%">
+ </div>
+
+<!--Decision Tree-->
+<div class = "page-header">
+    <h3>
+       Random Forest Classification & Decision Tree<br>
+       <small>Utilized important features (Borough, Persons Injured, and Hour) to determine the liklihood of a fatality.</small>
+    </h3>
+
+ 
+ <p>lakjdf;laksjdf;lksajf;lkasjdf ;klsj</p>
+<img src="images/features.png" alt="Features Importance" style = "width:40%">
+
+<img src="images/decision_tree2.png" alt="Decision Tree" style = "width:100%">
+ </div>
+
+
+
+
 </center>
 </body>
 
